--- a/interface/apps/audiobook/templates/base.html
+++ b/interface/apps/audiobook/templates/base.html
@@ -1,30 +1,27 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Do You Consider Yourself a Candidate for Space Travel?</title>
+	<title></title>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-	<link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/reset.css" />
+	<link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}blue.monday/jplayer.blue.monday.css" />
 	<link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/site.css" />
+	<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>		
 	{% block extra_css %}{% endblock %}		
-	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
-	<script type="text/javascript" src="{{ STATIC_URL }}js/lib/jlabel.js"></script>
-	<script type="text/javascript" src="{{ STATIC_URL }}js/lib.js"></script>
-	<script type="text/javascript" src="{{ STATIC_URL }}js/site.js"></script>
-	{% block extra_js %}{% endblock %}	
 </head>
 <script type="text/javascript">
 	var baseUrl = '{{ STATIC_URL }}../';
 </script>
 <body>
 	<div id="container">
-		<!--
-		<a id="viewVideos" href="/videos/">view videos</a>		
-		<a id="addVideo" href="/videos/add/">add video</a>
-		-->
-		<div id="main">
-			{% block content %}{% endblock %}	
-		</div>
+		{% block content %}
+		{% endblock %}	
     </div>
-</body>
 
+	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+	<script type="text/javascript" src="{{ STATIC_URL }}js/lib/jlabel.js"></script>
+	<script type="text/javascript" src="{{ STATIC_URL }}js/jquery.jplayer.min.js"></script>
+	<script type="text/javascript" src="{{ STATIC_URL }}js/lib.js"></script>
+	<script type="text/javascript" src="{{ STATIC_URL }}js/site.js"></script>
+	{% block extra_js %}{% endblock %}	    
+</body>
 </html>
