--- a/interface/apps/audiobook/templates/index.html
+++ b/interface/apps/audiobook/templates/index.html
@@ -2,47 +2,53 @@
 
 {% block content %}
 
-{% if video %}
-<div id="mainVideo">
-
-    {% csrf_token %}
-
-    {% block detail %}
-    <iframe id="vimeoFrame" src="http://player.vimeo.com/video/{{ video.code }}?api=1" width="400" height="300" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>		
-    {% endblock %}
-    <div id="controlLayer">&nbsp;</div>
-    <a id="videoHover" href="/add/">
-        <h1>
-            DO YOU CONSIDER <br />YOURSELF A CANDIDATE <br />FOR SPACE TRAVEL? <span id="goToUpload">yes</span>
-        </h1>
-        <div id="videoInfo">
-            <p>
-                PAGE {{ video.page.number }}: {{ video.author }}
-            </p>
-        </div>
-    </a>
-</div>
-{% endif %}
-
-{% if video_list %}
-<div id="allVideos">
-{% for video in video_list %}
-    <a class="video" href="/{{ video.id }}/" id="video_{{ video.id }}">
-        <img class="index" src="{{ STATIC_URL }}{{ video.thumbnail }}" title="" />
-        <div class="rollover">
-            <div class="arrow"></div>
-            <img class="hover" src="{{ STATIC_URL }}{{ video.thumbnail }}" title="" />
-            <div class="info">
-                <p>
-                    PAGE {{ video.page.number }}
-                </p>				
+<div id="jquery_jplayer_1" class="jp-jplayer"></div>
+<div id="jp_container_1" class="jp-audio">
+    <div class="jp-type-single">
+        <div class="jp-gui jp-interface">
+            <ul class="jp-controls">
+                <li>
+                    <a href="javascript:;" class="jp-play" tabindex="1">play</a>
+                </li>
+                <li>
+                    <a href="javascript:;" class="jp-pause" tabindex="1">pause</a>
+                </li>
+            </ul>
+            <div class="jp-progress">
+                <div class="jp-seek-bar">
+                    <div class="jp-play-bar"></div>
+                </div>
+            </div>
+            <div class="jp-time-holder">
+                <div class="jp-current-time"></div>
+                <div class="jp-duration"></div>
             </div>
         </div>
-    </a>
-{% endfor %}
+        <div class="jp-no-solution">
+            <span>Update Required</span>
+            To play the media you will need to either update your browser to a recent version or update your <a href="http://get.adobe.com/flashplayer/" target="_blank">Flash plugin</a>.
+        </div>
+    </div>
+
+    <div id="player">
+        <div id="page">PAGE 8</div>
+
+        <table id="sounds">
+            <tr>
+                <td class="uploaded"><br/></td>
+                <td class="empty"><br/></td>
+                <td><br/></td>
+                <td class="uploaded"><br/></td>
+                <td><br/></td>
+                <td><br/></td>
+                <td class="uploaded"><br/></td>
+            </tr>
+        </table>
+    </div>
 </div>
-<div class="clear">&nbsp;</div>
-{% endif %}
 
-{% endblock %}
+<div id="book">
+    <iframe frameborder="0" scrolling="no" style="border-bottom:2px solid #AAA" src="http://books.google.fr/books?id=YpTA74jz018C&lpg=PP1&hl=fr&pg=PP1&output=embed" width=500 height=500></iframe>
+</div>
 
+{% endblock content %}
