jplayer works with page clicks

--- a/interface/apps/audiobook/templates/base.html
+++ b/interface/apps/audiobook/templates/base.html
@@ -9,7 +9,7 @@
 	{% block extra_css %}{% endblock %}		
 </head>
 <script type="text/javascript">
-	var baseUrl = '{{ STATIC_URL }}../';
+	var STATIC_URL = '{{ STATIC_URL }}';
 </script>
 <body>
 	<div id="container">
