--- a/interface/apps/audiobook/templates/index.html
+++ b/interface/apps/audiobook/templates/index.html
@@ -35,7 +35,7 @@
                 {% if page.submission.audio_file %}
                 <a id="page_{{ forloop.counter}}" class="uploaded"><span id="{{ STATIC_URL }}{{ page.submission.audio_file.name }}"></span></a>
                 {% else %}
-                <a id="page_{{ forloop.counter}}"></a>                
+                <a id="page_{{ forloop.counter}}" class="empty"></a>                
                 {% endif %}
             {% endfor %}
         </div>
