--- a/interface/apps/audiobook/templates/base.html
+++ b/interface/apps/audiobook/templates/base.html
@@ -5,7 +5,7 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}blue.monday/jplayer.blue.monday.css" />
 	<link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/site.css" />
-	<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>	
+	<link href='http://fontsw.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 	<!--[if IE]>
 		<link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/site_ie_netscape.css" />
 	<![endif]-->
@@ -24,8 +24,7 @@
 		{% endblock %}	
     </div>
 
-	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
-	<script type="text/javascript" src="{{ STATIC_URL }}js/lib/jlabel.js"></script>
+	<script type="text/javascript" src="{{ STATIC_URL }}js/jquery.js"></script>
 	<script type="text/javascript" src="{{ STATIC_URL }}js/jquery.jplayer.min.js"></script>
 	<script type="text/javascript" src="{{ STATIC_URL }}js/lib.js"></script>
 	<script type="text/javascript" src="{{ STATIC_URL }}js/site.js"></script>
