--- a/interface/apps/audiobook/templates/index.html
+++ b/interface/apps/audiobook/templates/index.html
@@ -3,12 +3,23 @@
 {% block content %}
 
 <div id="upload_bg">
-	<div id="default_text">Choose file for Page ___</div>
+	<!--<div id="default_text">Choose file for Page ___</div>-->
 	<div id="upload_form" >
-		<form name="sound_upload" action="" method="post">
-		<input id="file_upload" type="file" name="uploadField" size="20" value="Choose File" /><br/><br/>
-		<input id="file_submit" type="submit" value="Upload">
-		</form>
+       <form id="upload" name="sound_upload" action="{% url 'book' %}" enctype="multipart/form-data" method="POST">{% csrf_token %}
+            {% if form.errors %}
+            <div id="errors">
+            {% for field in form %}
+                <p><strong>{{ field.errors }}</strong></p>
+            {% endfor %}                
+            </div>
+            {% endif %}
+            
+            {{ form.audio_file }}
+            {{ form.page }}
+            
+            <br/><br/>
+            <input id="file_submit" type="submit" value="Upload">
+        </form>
 	</div>
 </div>
 <div id="jquery_jplayer_1" class="jp-jplayer"></div>
