updating filename in default_text div

--- a/interface/apps/audiobook/templates/index.html
+++ b/interface/apps/audiobook/templates/index.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 <div id="upload_bg">
-	<!--<div id="default_text">Choose file for Page ___</div>-->
+	<div id="default_text">Choose file for Page</div>
 	<div id="upload_form" >
        <form id="upload" name="sound_upload" action="{% url 'book' %}" enctype="multipart/form-data" method="POST">{% csrf_token %}
             {% if form.errors %}
