--- a/interface/apps/audiobook/static/css/site.css
+++ b/interface/apps/audiobook/static/css/site.css
@@ -118,21 +118,18 @@ a.jp-play, a.jp-pause {
     height: 10px;
     width: 10px;
 }
-
 #upload_form {
 	width:135px;
 	padding:20px;
 	overflow:hidden;
 	position: relative;
 }
-
 #upload_form #id_audio_file {
-	opacity:1;
+	opacity:0;
 }
 #upload_form #id_page {
 	display: none;
 }
-
 #upload_bg {
 	position:absolute;
 	top:100px;
@@ -141,6 +138,7 @@ a.jp-play, a.jp-pause {
 	background:white;
 	z-index:101;
 	width:236px;
+	display: none;
 }
 #upload_bg #default_text {
 	position:absolute;
@@ -152,5 +150,8 @@ a.jp-play, a.jp-pause {
 }
 #upload_form #file_submit {
 	border:1pt solid #EEE;
-
+}
+#upload_form #file_submit:hover {
+	background: #757575;
+	color: white; 
 }
