player moves to the next uploaded sound when a sound is done playing

--- a/interface/apps/audiobook/static/css/site.css
+++ b/interface/apps/audiobook/static/css/site.css
@@ -51,7 +51,9 @@ body {
 #sounds a.empty:hover {
 	background: red;
 }
-
+#sounds a.playing {
+	background: black;
+}
 #page {
 	font-family:"Andale Mono","Open Sans",Helvetica, Arial, sans-serif;
 	font-size:7pt;
