fixed page number positioning

--- a/interface/apps/audiobook/static/css/site.css
+++ b/interface/apps/audiobook/static/css/site.css
@@ -57,7 +57,7 @@ body {
 #page {
 	font-family:"Andale Mono","Open Sans",Helvetica, Arial, sans-serif;
 	font-size:7pt;
-	position:absolute;
+	position:fixed;
 	display:none;
 }
 
