--- a/interface/apps/audiobook/templates/index.html
+++ b/interface/apps/audiobook/templates/index.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 <div id="upload_bg">
-	<div id="default_text">Choose file for Page</div>
+	<div id="default_text">Choose file for page</div>
 	<div id="upload_form" >
        <form id="upload" name="sound_upload" action="{% url 'book' %}" enctype="multipart/form-data" method="POST">{% csrf_token %}
             {% if form.errors %}
@@ -53,7 +53,7 @@
         <div id="sounds">
             {% for page in work.page_set.all %}
                 {% if page.submission.audio_file %}
-                <a id="page_{{ forloop.counter}}" class="uploaded"><span id="{{ STATIC_URL }}{{ page.submission.audio_file.name }}"></span></a>
+                <a id="page_{{ forloop.counter}}" class="uploaded"><span id="{{ MEDIA_URL }}{{ page.submission.audio_file.name }}"></span></a>
                 {% else %}
                 <a id="page_{{ forloop.counter}}" class="empty"></a>                
                 {% endif %}
