--- a/interface/apps/audiobook/templates/base.html
+++ b/interface/apps/audiobook/templates/base.html
@@ -4,6 +4,7 @@
 	<title></title>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}blue.monday/jplayer.blue.monday.css" />
+	<link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/perfect-scrollbar.css" />
 	<link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/site.css" />
 	<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>	
 	<!--[if IE]>
@@ -29,6 +30,7 @@
 	<script type="text/javascript" src="{{ STATIC_URL }}js/jquery.jplayer.min.js"></script>
 	<script type="text/javascript" src="{{ STATIC_URL }}js/lib.js"></script>
 	<script type="text/javascript" src="{{ STATIC_URL }}js/site.js"></script>
+	<script type="text/javascript" src="{ STATIC_URL }}js/perfect-scrollbar.js"></script>
 	{% block extra_js %}{% endblock %}	    
 </body>
 </html>
