--- a/interface/apps/audiobook/templates/base.html
+++ b/interface/apps/audiobook/templates/base.html
@@ -28,6 +28,7 @@
 	<script type="text/javascript" src="{{ STATIC_URL }}js/jquery.js"></script>
 	<script type="text/javascript" src="{{ STATIC_URL }}js/jquery.jplayer.min.js"></script>
 	<script type="text/javascript" src="{{ STATIC_URL }}js/perfect-scrollbar.js"></script>	
+	<script type="text/javascript" src="{{ STATIC_URL }}js/jquery.mousewheel.js"></script>	
 	<script type="text/javascript" src="{{ STATIC_URL }}js/lib.js"></script>
 	<script type="text/javascript" src="{{ STATIC_URL }}js/site.js"></script>
 	{% block extra_js %}{% endblock %}	    
