--- a/interface/apps/audiobook/static/css/site.css
+++ b/interface/apps/audiobook/static/css/site.css
@@ -122,7 +122,7 @@ a.jp-play, a.jp-pause {
 }
 #upload_form {
 	width:135px;
-	padding:20px;
+	padding:15px;
 	overflow:hidden;
 	position: relative;
 }
@@ -145,11 +145,11 @@ a.jp-play, a.jp-pause {
 }
 #upload_bg #default_text {
 	position:absolute;
-	top:35px;
-	left:20px;
+	top:30px;
+	left:15px;
 	border:1pt solid #EEE;
 	padding:4px 5px;
-	width:185px;
+	width:195px;
 }
 #upload_form #file_submit {
 	border:1pt solid #EEE;
@@ -161,7 +161,10 @@ a.jp-play, a.jp-pause {
 #close {
 	background:url("tiny_close.png") no-repeat;
 	float:right;
-	margin:10px 20px;
+	margin:15px 15px;
 	width:5px;
 	height:5px;
+}
+#close:hover {
+	cursor:pointer;
 }
