--- a/interface/apps/audiobook/static/css/site.css
+++ b/interface/apps/audiobook/static/css/site.css
@@ -132,6 +132,7 @@ a.jp-play, a.jp-pause {
 }
 #upload_form #id_audio_file {
 	opacity:0;
+	padding-top:20px;
 }
 #upload_form #id_page {
 	display: none;
