highlighting text that was uploaded

--- a/interface/apps/audiobook/static/css/site.css
+++ b/interface/apps/audiobook/static/css/site.css
@@ -21,7 +21,10 @@ body {
 #book {
 	float:right;
 	opacity:1;
-	color: white;
+	color: black;
+}
+#book .uploaded {
+	background-color: yellow;
 }
 #sounds {
 	padding:0;
