--- a/interface/apps/audiobook/templates/index.html
+++ b/interface/apps/audiobook/templates/index.html
@@ -27,7 +27,11 @@
 	</div>
 </div>
 <div id="jquery_jplayer_1" class="jp-jplayer"></div>
-
+<div id="menu">
+	<a id="upload" href=""></a>
+	<a id="play" href=""></a>
+	<a id="info" href=""></a>
+</div>
 <div id="book">
     {% render_text work %}
 </div>
