--- a/interface/apps/audiobook/templates/index.html
+++ b/interface/apps/audiobook/templates/index.html
@@ -28,9 +28,21 @@
 </div>
 <div id="jquery_jplayer_1" class="jp-jplayer"></div>
 <div id="menu">
-	<a id="upload" href=""></a>
-	<a id="play" href=""></a>
-	<a id="info" href=""></a>
+	<a id="upload" href="">Upload</a>
+	<a id="play" href="">Play</a>
+	<a id="info" href="">Info</a>
+</div>
+<div id="about">
+	<div id="close"><a href="" /></a></div>
+	<p><i>"I am invisible, understand, simply because people refuse to see me."</i></p>
+	<p>On September 16, 2013, the Randolph County Board of Education in central North Carolina banned Ralph Ellison's <i>The Invisible Man</i> after a junior high school parent complained of the sexual content in the book. According to Reuters, "Five of the board's seven elected officials agreed on September 16 to bar the novel, with one member saying he "didn't find any literary value" in Ellison's account of African-American alienation in the United States in the early 20th century," despite the fact that book has won numerous awards such as the National Book Award for fiction in 1953 and was named by the Library of Congress as one of the "Books That Shaped America."</p>
+	<p>Who shapes our culture? Who defines our values? Who writes our history?</p>
+	<p>After national outcry and an action by one local bookseller Books-a-Million to give away copies of the book, the North Carolina School Board lifted the ban just 6 days later.</p>
+	<p>Who makes a difference? Who sets precedents? Who changes laws?</p>
+	<p>In the novel, the main character's struggles to do good in the world are thwarted by structures instituted to keep anything from changing, everything in its place. He eventually aligns himself, not with elitist intellectuals or charismatic politicians, but with the invisible, those who tip-toe precariously at the periphery of our society.</p>
+	<p>We are asking participants to read out loud and record as much or as little of the book as they want in a show of solidarity with the invisible. Through the voice, may we collectively enact a visibility.</p>
+	<br/>
+	<p><b>Contribute</b> <ul><li>Find text that has not yet been recorded by selecting the text (if text is crossed out, then it has already been recorded).</li> <li>Record the text on an iphone, portable recorder, or straight into your computer.</li> <li>Click <i>upload</i> and follow the instructions.</li></ul>
 </div>
 <div id="book">
     {% render_text work %}
