--- a/interface/apps/audiobook/static/css/site.css
+++ b/interface/apps/audiobook/static/css/site.css
@@ -3,6 +3,7 @@ body {
 	font-size:9pt;
 	color:#333;
 	margin:40px;
+	line-height:1.4em;
 }
 .invisible {
 	color:#EEE;
@@ -188,6 +189,7 @@ a.jp-play, a.jp-pause {
 	top:-30px;
 	left:-100px;
 }
+/*
 #menu a {
 	display:block;
 	float:left;
@@ -203,3 +205,22 @@ a.jp-play, a.jp-pause {
 #menu a#info {
 	background:url("icons.png") -48px -8px;
 }
+*/
+#menu a {
+	display:block;
+	text-decoration:none;
+	color:#333;
+}
+#about {
+	display:none;
+	background:white;
+	position:absolute;
+	top:0px;
+	left: 0px;
+	border:1px solid #333;
+	padding:15px 20px;
+}
+#about #close {
+	margin:0;
+}
+
