--- a/interface/apps/audiobook/templates/index.html
+++ b/interface/apps/audiobook/templates/index.html
@@ -30,6 +30,7 @@
 <div id="menu">
 	<a id="upload" href="">Upload</a>
 	<a id="play" href="">Play</a>
+    <a id="pause" href="">Pause</a>    
 	<a id="info" href="">Info</a>
 </div>
 <div id="about">
